# pasta

./: .gitignore  AGENTS.md  Cargo.toml  GRAMMAR.md  Gulpfile.coffee  LICENSE  OPTIMIZATION.md  README.md  SCENE_TABLE_REVIEW.md  SOUL.md  SPECIFICATION.md  TEST_COVERAGE.md  about.html  about.md  atom.xml  build.bat  check.bat  check_global_state.ps1  debug_combined.rn  debug_combined_source.rn  index.html  index.md  init.bat  make.bat  npm_update.bat  package.json  params.json  readme.md  rss.html  rss.xml  run.bat  test.bat  test_combined_code.rn  test_output.txt  test_output2.txt  watch.bat
crates/pasta_core/: Cargo.toml  README.md
crates/pasta_core/src/: error.rs  lib.rs
crates/pasta_core/src/parser/: ast.rs  grammar.pest  mod.rs
crates/pasta_core/src/registry/: mod.rs  random.rs  scene_registry.rs  scene_table.rs  word_registry.rs  word_table.rs
crates/pasta_core/tests/: actor_code_block_test.rs  digit_id_var_test.rs  sakura_symbol_tag_test.rs  span_byte_offset_test.rs
crates/pasta_lua/: .luacheckrc  Cargo.toml  LUA_API.md  README.md
crates/pasta_lua/doc/lua55-manual/: 01-introduction.md  02-basic-concepts.md  03-language.md  04-c-api.md  05-auxiliary-library.md  06-standard-libraries.md  07-standalone.md  08-incompatibilities.md  09-complete-syntax.md  ABOUT.md  GLOSSARY.md  LICENSE.md  README.md  index.md
crates/pasta_lua/scriptlibs/: README.md
crates/pasta_lua/scriptlibs/lua_test/: readme.md  test.lua
crates/pasta_lua/scripts/: README.md  ct.lua  hello.lua  main.lua
crates/pasta_lua/scripts/pasta/: act.lua  actor.lua  co.lua  ctx.lua  global.lua  init.lua  scene.lua  store.lua  word.lua
crates/pasta_lua/src/: code_generator.rs  config.rs  context.rs  error.rs  lib.rs  normalize.rs  string_literalizer.rs  transpiler.rs
crates/pasta_lua/src/encoding/: mod.rs  unix.rs  windows.rs
crates/pasta_lua/src/loader/: cache.rs  config.rs  context.rs  discovery.rs  error.rs  mod.rs
crates/pasta_lua/src/logging/: logger.rs  mod.rs  registry.rs
crates/pasta_lua/src/runtime/: enc.rs  finalize.rs  log.rs  mod.rs  persistence.rs
crates/pasta_lua/src/sakura_script/: mod.rs  tokenizer.rs  wait_inserter.rs
crates/pasta_lua/src/search/: context.rs  error.rs  mod.rs
crates/pasta_lua/tests/: actor_word_dictionary_test.rs  config_actors_initialization_test.rs  fallback_search_integration_test.rs  finalize_scene_test.rs  japanese_identifier_test.rs  loader_integration_test.rs  log_integration_test.rs  log_module_test.rs  log_stack_level_test.rs  lua_unittest_runner.rs  pasta_lua_encoding_test.rs  persistence_integration_test.rs  runtime_e2e_test.rs  sakura_script_integration_test.rs  scene_search_test.rs  search_module_test.rs  shiori_event_test.rs  shiori_res_test.rs  stdlib_modules_test.rs  stdlib_regex_test.rs  transpiler_integration_test.rs  transpiler_snapshot_test.rs  ucid_test.rs  virtual_event_dispatcher_test.rs
crates/pasta_lua/tests/common/: e2e_helpers.rs  mod.rs
crates/pasta_lua/tests/fixtures/: sample.expected.lua  sample.generated.lua  sample.lua  sample.pasta
crates/pasta_lua/tests/lua_specs/: README.md  act_build_early_return_test.lua  act_grouping_test.lua  act_impl_call_test.lua  act_test.lua  actor_word_spec.lua  event_coroutine_test.lua  event_no_entry_test.lua  global_chaintalk_call_test.lua  global_chaintalk_integration_test.lua  init.lua  integration_coroutine_test.lua  persist_spot_position_test.lua  persistence_spec.lua  res_ok_test.lua  sakura_builder_test.lua  second_change_thread_test.lua  shiori_act_test.lua  store_coroutine_test.lua  store_save_test.lua  transfer_req_to_var_test.lua  transpiler_test.lua  virtual_dispatcher_spec.lua  virtual_dispatcher_thread_test.lua
crates/pasta_lua/tests/snapshots/: transpiler_snapshot_test__actor_word_definition.snap  transpiler_snapshot_test__minimal_scene.snap  transpiler_snapshot_test__multiple_scenes.snap  transpiler_snapshot_test__scene_with_attributes.snap  transpiler_snapshot_test__scene_with_call.snap  transpiler_snapshot_test__scene_with_variables.snap  transpiler_snapshot_test__scene_with_word.snap  (+1 more)
crates/pasta_rune/: Cargo.toml
crates/pasta_rune/src/: cache.rs  engine.rs  error.rs  lib.rs  loader.rs
crates/pasta_rune/src/ir/: mod.rs
crates/pasta_rune/tests/: parser2_integration_test.rs  pasta_call_unified_scope_test.rs  pasta_engine_persistence_test.rs  pasta_engine_rune_block_test.rs  pasta_engine_rune_closure_test.rs  pasta_engine_rune_module_memory_test.rs  pasta_engine_rune_module_merge_test.rs  pasta_engine_rune_rust_module_test.rs  pasta_engine_rune_simple_test.rs  pasta_engine_scene_resolution_test.rs  pasta_integration_concurrent_execution_test.rs  pasta_integration_control_flow_test.rs  pasta_integration_directory_loader_test.rs  pasta_integration_engine_independence_test.rs  pasta_integration_engine_test.rs  pasta_integration_engine_two_pass_test.rs  pasta_integration_error_handling_test.rs  pasta_integration_stdlib_test.rs  pasta_rune_tuple_syntax_test.rs  pasta_stdlib_call_jump_separation_test.rs  pasta_transpiler2_e2e_test.rs  pasta_transpiler2_error_test.rs  pasta_transpiler2_integration_test.rs  pasta_transpiler2_unit_test.rs  pasta_word_definition_e2e_test.rs  sakura_debug_test.rs  scene_id_consistency_test.rs
crates/pasta_sample_ghost/: Cargo.toml  README.md  RELEASE.md  build.rs  hello-pasta.nar  release.bat  release.ps1  setup.bat  setup.ps1
crates/pasta_sample_ghost/dist-src/: install.txt
crates/pasta_sample_ghost/ghosts/: ghostlist.xml  hello-pasta.nar
crates/pasta_sample_ghost/src/: config_templates.rs  image_generator.rs  lib.rs  main.rs  scripts.rs  update_files.rs
crates/pasta_sample_ghost/templates/: ghost_descript.txt.template  install.txt.template  pasta.toml.template  shell_descript.txt.template
crates/pasta_sample_ghost/tests/: dist_src_validation_test.rs  integration_test.rs
crates/pasta_shiori/: Cargo.toml  README.md
crates/pasta_shiori/src/: error.rs  lib.rs  lua_request.rs  shiori.rs  windows.rs
crates/pasta_shiori/tests/: lua_request_test.rs  ontalk_probe_test.rs  shiori_lifecycle_test.rs  shiori_sample_ghost_test.rs
(+1941 files in other folders)
