# Pasta Workspace Root - Script engine for areka desktop mascot application
# This file defines the workspace structure; individual packages are in crates/

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Dot-Station Master <dot.station@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# pasta_core dependencies
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
thiserror = "2"
fast_radix_trie = "1.1.0"
rand = "0.9"
tracing = "0.1"

# Development dependencies
tempfile = "3"

# pasta_lua dependencies
mlua = { git = "https://github.com/ekicyou/mlua.git", features = ["lua54", "vendored", "ucid"] }

# Internal dependencies
pasta_core = { path = "crates/pasta_core" }
pasta_lua = { path = "crates/pasta_lua" }
