# Pasta Workspace Root - Script engine for areka desktop mascot application
# This file defines the workspace structure; individual packages are in crates/

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Dot-Station Master <dot.station@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ekicyou/pasta"
homepage = "https://github.com/ekicyou/pasta"
documentation = "https://github.com/ekicyou/pasta"

[workspace.dependencies]
# pasta_core dependencies
pest = "2.8.6"
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }
thiserror = "2"
fast_radix_trie = "1.1.0"
rand = "0.9"
tracing = "0.1"

# Development dependencies
tempfile = "3"
insta = { version = "1.46.3", features = ["glob"] }

# pasta_lua dependencies
lua-src = { version = ">= 550.0.0, < 560.0.0", features = ["ucid"] }
mlua = { version = "0.11", features = ["lua55", "vendored", "serialize"] }
mlua-stdlib = { version = "0.1", features = ["json", "regex", "yaml"] }
regex = "1.12.3"
toml = "0.9.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
flate2 = "1.1.9"

# Logging dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Internal dependencies
pasta_core = { path = "crates/pasta_core", version = "0.1.2" }
pasta_lua = { path = "crates/pasta_lua", version = "0.1.2" }
pasta_shiori = { path = "crates/pasta_shiori", version = "0.1.2" }

# Release profile optimizations for size reduction
[profile.release]
opt-level = "z"       # Optimize for size (最小サイズ)
lto = true            # Link-Time Optimization (全体最適化)
codegen-units = 1     # 並列コード生成を無効化して最適化向上
panic = "abort"       # パニック時にアンワインド不要（サイズ削減）
strip = true          # デバッグシンボルを削除
