[package]
name = "pasta_lua"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "Pasta Lua - Lua integration for Pasta DSL"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
mlua.workspace = true
pasta_core.workspace = true

[build-dependencies]
lua-src.workspace = true
