[package]
name = "pasta_lua"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "Pasta Lua - Lua integration for Pasta DSL"

[dependencies]
pasta_core.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
mlua.workspace = true
mlua-stdlib.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
flate2.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Globalization"] }

[build-dependencies]
lua-src.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
