[package]
name = "pasta_rune"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = true
description = "Pasta Rune - Script engine with Rune language backend"

[dependencies]
pasta_core.workspace = true
rune.workspace = true
thiserror.workspace = true
glob.workspace = true
tracing.workspace = true
rand.workspace = true
futures.workspace = true
toml.workspace = true
fast_radix_trie.workspace = true

[dev-dependencies]
tempfile.workspace = true
