[package]
name = "pasta_sample_ghost"
version = "0.1.0"
description = "Sample ghost implementation for pasta - hello-pasta"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "generate-surfaces"
path = "src/bin/generate_surfaces.rs"

[dependencies]
# 画像生成
image = "0.25"
imageproc = "0.25"

# エラー処理
thiserror.workspace = true

[dev-dependencies]
# pasta_shiori（DLL ビルド時に自動的に pasta.dll がコピーされる）
pasta_shiori = { path = "../pasta_shiori" }

# pasta_lua ランタイム（テスト用）
pasta_lua = { path = "../pasta_lua" }

# テスト用一時ディレクトリ
tempfile.workspace = true
