[package]
name = "pasta_shiori"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SHIORI DLL interface for pasta script engine"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "pasta"
crate-type = ["cdylib", "rlib"]

[dependencies]
pasta_core.workspace = true
pasta_lua.workspace = true
time = { version = "0.3", features = ["local-offset"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
pest.workspace = true
pest_derive.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_Globalization"] }

[dev-dependencies]
tempfile.workspace = true
